@@ -1,51 +1,18 @@
 plugins {
-    alias(libs.plugins.androidLibrary)
-    alias(libs.plugins.jetbrains.kotlin)
-    alias(libs.plugins.kotlin.ksp)
+    alias(libs.plugins.gamedeals.android.library)
+    alias(libs.plugins.gamedeals.android.ksp)
     alias(libs.plugins.hilt)
 }
 
 android {
     namespace = "pm.bam.gamedeals.base"
-    compileSdk = 36
 
     defaultConfig {
-        minSdk = 26
-
         testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
-    }
-
-    buildTypes {
-        release {
-            isMinifyEnabled = false
-            proguardFiles(getDefaultProguardFile("proguard-android-optimize.txt"))
-        }
-    }
-    compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_21
-        targetCompatibility = JavaVersion.VERSION_21
-    }
-    kotlin {
-        jvmToolchain(21)
-    }
-    packaging {
-        resources {
-
-            excludes += "/META-INF/LICENSE.md"
-            excludes += "/META-INF/LICENSE-notice.md"
-            excludes += "/META-INF/{AL2.0,LGPL2.1}"
-
-            // Temporary fix for OSGi issue org.jspecify:jspecify:1.0.0 and com.squareup.okhttp3:logging-interceptor:5.2.1
-            excludes += "META-INF/versions/9/OSGI-INF/MANIFEST.MF"
-        }
-    }
-    tasks.withType<Test> {
-        jvmArgs = listOf("-XX:+EnableDynamicAgentLoading")
     }
 }
 
 dependencies {
-
     implementation(project(":common"))
     implementation(project(":logging"))
 
